welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:6: error: not found: value ep
		if(nums(i)>ep){
                           ^indexOfMaxValue:8: error: not found: value ep
			ep = nums(i)
                        ^