welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var ind = 0
	var max = 0
	var L=nums.length
	for(i<- 0 to L-1){
		if(nums(i)>ep){
			ind = i;
			ep = nums(i)
		}
	}
	return ind
}
